--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,400' rel='stylesheet' type='text/css'>
 
-	<!--Script for animation of box-->
+	<!--Script for animation of box and man-->
 	<script>
 		 $(document).ready(function(){
   		 	setTimeout(function () { $(".arrow").fadeTo(0, 1)}, 2000);
